--- a/LIBS_venv/pyvenv.cfg
+++ b/LIBS_venv/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = C:\Users\manju\AppData\Local\Programs\Python\Python310
+home = C:\Users\Alex\AppData\Local\Programs\Python\Python311
 include-system-site-packages = false
-version = 3.10.0
+version = 3.11.3
+executable = C:\Users\Alex\AppData\Local\Programs\Python\Python311\python.exe
+command = C:\Users\Alex\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Users\Alex\Desktop\LIBS_changes\LIBS-Data-Analysis\LIBS_venv
